lib/rust/language_pack_jp/tests/snapshots/r#mod__check_regressions-14.snap
---
source: lib/rust/language_pack_jp/tests/mod.rs
expression: result
---
- - なった
  - なう
  - 43653
