lib/rust/language_pack_jp/tests/snapshots/r#mod__check_regressions-15.snap
---
source: lib/rust/language_pack_jp/tests/mod.rs
expression: result
---
- - 泣き
  - 泣き
  - 12074
- - そうになった
  - そうになった
  - 39838
