lib/rust/language_pack_jp/tests/snapshots/r#mod__check_regressions-16.snap
---
source: lib/rust/language_pack_jp/tests/mod.rs
expression: result
---
- - という
  - という
  - 55
