lib/rust/language_pack_jp/tests/snapshots/r#mod__check_regressions-17.snap
---
source: lib/rust/language_pack_jp/tests/mod.rs
expression: result
---
- - すぐそこ
  - すぐそこ
  - ~
