lib/rust/language_pack_jp/tests/snapshots/r#mod__check_regressions-19.snap
---
source: lib/rust/language_pack_jp/tests/mod.rs
expression: result
---
- - という
  - という
  - 55
- - おばあさん
  - おばあさん
  - 10393
