lib/rust/language_pack_jp/tests/snapshots/r#mod__check_regressions-2.snap
---
source: lib/rust/language_pack_jp/tests/mod.rs
expression: result
---
- - くる
  - くる
  - 34
