lib/rust/language_pack_jp/tests/snapshots/r#mod__check_regressions-20.snap
---
source: lib/rust/language_pack_jp/tests/mod.rs
expression: result
---
- - 預けられていた
  - 預く
  - ~
