lib/rust/language_pack_jp/tests/snapshots/r#mod__check_regressions-21.snap
---
source: lib/rust/language_pack_jp/tests/mod.rs
expression: result
---
- - 預けられて
  - 預く
  - ~
- - いた
  - く
  - 281
