lib/rust/language_pack_jp/tests/snapshots/r#mod__check_regressions-23.snap
---
source: lib/rust/language_pack_jp/tests/mod.rs
expression: result
---
- - マイン
  - マイン
  - 18233
- - は
  - は
  - 2
- - 蜘蛛の巣
  - 蜘蛛の巣
  - 17376
- - が
  - が
  - 4
- - 怖い
  - 怖い
  - 337
- - のか
  - のか
  - 111226
- - 仕方がない
  - 仕方がない
  - 1980
- - な
  - な
  - 22
- - 父さん
  - 父さん
  - 2133
- - が
  - が
  - 4
- - 取ってやろう
  - 取る
  - 121
