lib/rust/language_pack_jp/tests/snapshots/r#mod__check_regressions-24.snap
---
source: lib/rust/language_pack_jp/tests/mod.rs
expression: result
---
- - 思いつかなかった
  - 思いつく
  - 1682
